--- a/.classpath
+++ b/.classpath
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
 		<attributes>
-			<attribute name="module" value="true"/>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="tfy_lab3/src"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/collections-generic-4.01.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/colt-1.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/concurrent-1.3.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/j3d-core-1.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/jung-3d-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/jung-3d-demos-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/jung-algorithms-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/jung-api-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/jung-graph-impl-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/jung-io-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/jung-jai-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/jung-jai-samples-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/jung-samples-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/jung-visualization-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/stax-api-1.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/vecmath-1.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/westy/Documents/workspace/jung/wstx-asl-3.2.6.jar"/>
-	<classpathentry kind="output" path="tfy_lab3/bin"/>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
